# hodnocenivass-2024

./: Cargo.toml  README.md
src/: main.rs
templates/assets/css/: styl.css
templates/assets/js/: cookie.js  odpocitavani.js  vyberucitelu.js
templates/pages/: gdpr.html  hlavnistranka.html  hodnoceni.html  informace.html  jiz-hodnoceno.html  podekovani.html  predbeznevysledky-hx.html  predbeznevysledky.html  technickevysledky.html  vysledky.html  zpravy-hx.html  zpravy-poslat.html  zpravy.html
